# polysemy-pool

./: LICENSE  README.org  polysemy-pool.cabal  stack.yaml
src/Polysemy/: Pool.hs
src/Polysemy/Pool/: Effect.hs  IO.hs
